# 4th_paper_Text-to-SQL_Agent_MCP_On-Premise

./: README.md  client.py  connections.json  host.py  mcp_config.json  mcp_server_db.py  pyproject.toml
