[project]
name = "mcp-proj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu==1.10.0",
    "graphviz>=0.21",
    "jupyter>=1.1.1",
    "langchain-community==0.3.20",
    "langchain-mcp-adapters>=0.1.9",
    "langchain-ollama==0.3.6",
    "langgraph>=0.6.3",
    "mcp[cli]>=1.12.3",
    "mysql-connector-python>=9.4.0",
    "nest-asyncio==1.6.0",
    "oracledb>=3.3.0",
    "psycopg2-binary>=2.9.10",
    "pymssql>=2.3.7",
    "pyodbc>=5.2.0",
    "streamlit==1.44.1",
]
